# cooperative-coding-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
ccoding/: __init__.py  cli.py  config.py
ccoding/canvas/: markdown.py  model.py  reader.py  writer.py
ccoding/code/: docstring.py  generator.py  parser.py  types.py
ccoding/ghost/: manager.py
ccoding/git/: diff.py  hooks.py  merge.py
ccoding/live/: obsidian.py
ccoding/sync/: conflict.py  differ.py  engine.py  hasher.py  state.py
claude-code-skill/: README.md
claude-code-skill/.claude-plugin/: plugin.json
claude-code-skill/agents/: review.md
claude-code-skill/commands/: ccoding.md
claude-code-skill/hooks/: hooks.json
claude-code-skill/hooks/scripts/: session-start.sh
claude-code-skill/skills/cooperative-coding/: SKILL.md  create.md  design.md  implement.md  review.md
docs/superpowers/plans/: 2026-03-18-cooperative-coding-claude-code-skill.md  2026-03-18-cooperative-coding-cli-extension.md  2026-03-18-cooperative-coding-obsidian-plugin.md  2026-03-19-obsidian-plugin-native-integration.md  (+2 more)
obsidian-plugin/: data.json  manifest.json  package-lock.json  package.json  styles.css  vitest.config.ts
obsidian-plugin/src/: canvas-helpers.ts  canvas-patcher.ts  main.ts  settings.ts  types.ts
obsidian-plugin/tests/: canvas-patcher.test.ts  integration.test.ts  types.test.ts
tests/: conftest.py  test_cli.py  test_config.py  test_integration.py
tests/canvas/: test_markdown.py  test_model.py  test_reader.py  test_writer.py
tests/cli/: test_diff_filter.py  test_sync_strategy.py
tests/code/: test_docstring.py  test_generator.py  test_parser.py  test_types.py
tests/fixtures/: sample.canvas  sample_no_ccoding.canvas
tests/ghost/: test_manager.py
tests/git/: test_diff.py  test_hooks.py  test_merge.py
tests/live/: test_obsidian.py
tests/sync/: test_conflict.py  test_differ.py  test_engine.py  test_hasher.py  test_state.py
(+40 files in other folders)
