[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cooperative-coding"
version = "0.1.0"
description = "CooperativeCoding CLI extension — canvas manipulation, bidirectional sync, and ghost node management"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-tmp-files>=0.0.2",
]

[project.scripts]
ccoding = "ccoding.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ccoding"]

[tool.pytest.ini_options]
testpaths = ["tests"]
